# dioxus-recycle-list

./: Cargo.toml  README.md
preview/: main.rs
src/: lib.rs
