[package]
name = "dioxus-recycle-list"
version = "0.1.0"
edition = "2024"
rust-version = "1.93.0"
description = "A dynamic-height virtualized list component for Dioxus"
license = "MIT"
repository = "https://github.com/haywoodfu/dioxus-recycle-list"

[features]
default = []
preview = ["dioxus/web"]

[[bin]]
name = "preview"
path = "preview/main.rs"
required-features = ["preview"]

[dependencies]
dioxus = { version = ">=0.6.3", features = ["router"] }
dioxus-web = { version = ">=0.6.3" }
serde = { version = "1", features = ["derive"] }
